# Crosser-API

./: CMakeLists.txt  CrosserAPI.pc.in  README.md
include/: IGame.hpp  api-utils.hpp  currentGame.hpp  events.hpp  location.hpp  logger.hpp  plugin.hpp
src/: IGame.cpp  events.cpp  location.cpp  logger.cpp
